# matrix

./: CMakeLists.txt  README.md  build_linux.sh  input.txt  main.c  matrix.c  matrix.h
